# content-automation

./: .env.example  .gitignore  DEPLOY_MAC.md  Dockerfile  WORKBOOK_LAYOUT_SPEC.md  content_plan.toml  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.claude/skills/generate-workbook/: SKILL.md
app/: celery_app.py  config.py  database.py  main.py  models.py  scheduler.py  tasks.py
app/api/: review.py  workbook.py
app/integrations/: canva_client.py  claude_client.py  libsyn_client.py  meta_client.py  sendgrid_client.py  teachable_client.py
app/pipelines/social_post/: __init__.py
app/pipelines/workbook/: backgrounds.py  content_plan.py  design.py  generate.py  notify.py  publish.py  review.py
brand_voice/: README.md  tone_guide.md
scripts/: canva_auth.py  canva_smoke_test.py  fill_canva.py  run_local.py  run_monthly.py
secrets/: README.md
tests/: test_backgrounds.py  test_canva.py  test_content_plan.py  test_generate.py  test_review_loop.py  test_teachable_allowlist.py
